Style is kinda messy, the video screens are not wrapping correctly.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -86,7 +86,7 @@ body {
     }
 
     .preview-content {
-      flex-shrink: 0;
+      // flex-shrink: 0;
       margin: 5px;
     }
 }
@@ -165,12 +165,6 @@ body {
   margin: 0 0 2rem 0;                    
 }                                        
                                          
-.current-img {                           
-    background-color: lighten($color-pri, 45%);
-    border: solid 1px $color-pri;
-    border-radius: 2px;
-}
-
 
 .container-preview {
     object-fit: contain;
@@ -214,11 +208,6 @@ body {
     background: lighten($color-pri, 20%);
 }
 
-.selected-video {
-    border: 1px solid $color-pri;
-    background-color: lighten($color-pri, 40%);
-}
-
 .full-view-img {
     object-fit: contain;
     width: 100%;
@@ -232,21 +221,23 @@ body {
 }
 
 .preview-type {
-    width: 100%;
-    height: 100%;
     display: none;
 }
 
 // Based on content.shouldUseTypedPreview()
 .preview-isvideocam, .preview-isarticle {
-    border: 1px solid lighten($color-sec, 20%);
+    background: 1px solid lighten($color-sec, 20%);
     .preview-type {
-        display: block;
+        display: flex;
     }
+    /*
     .preview-img {
         display: none;
     }
+    */
 }
+
+.selected-video 
 
 // Might need to change how it works in layout
 .content-screens {
@@ -269,8 +260,10 @@ body {
   border: 1px solid #aaa;
 }
 
-.current-content-item {
-    border: 1px solid $color-pri;
+.current-content {                           
+    background-color: lighten($color-pri, 45%);
+    border: solid 1px $color-pri;
+    border-radius: 2px;
 }
 
 .content-tag {
